--- a/back_end/package.json
+++ b/back_end/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "concurrently": "^3.5.1",
     "cors": "^2.8.5",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "mysql": "^2.18.1"
   }
 }
