--- a/back_end/package.json
+++ b/back_end/package.json
@@ -19,6 +19,9 @@
     "concurrently": "^3.5.1",
     "cors": "^2.8.5",
     "express": "^4.16.2",
+    "express-jwt": "^6.0.0",
+    "express-jwt-authz": "^2.4.1",
+    "jwks-rsa": "^1.12.3",
     "mysql": "^2.18.1"
   }
 }
