added option to port which allows it to use any port values, added weatherApiKey to environment, made  weather file which should work, but it's not connected anywhere, we cam also add an option later to either type out the location or get it from somewhere, as of now it should just use dublin as default, also have imported the weather file  into the APP file, but it's not used yet

--- a/front_end/.env
+++ b/front_end/.env
@@ -1,2 +1,3 @@
 REACT_APP_AUTH0_DOMAIN=dev-l7o00ivv.eu.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=1BRKRNRtPRb7Q8LGnpo6Lu3n97hdTsFA
+REACT_APP_WEATHER_API_KEY=1cb0d644058ef9450cf252ea3fba6c39
