--- a/front_end/package.json
+++ b/front_end/package.json
@@ -6,6 +6,7 @@
     "@auth0/auth0-react": "^1.3.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3"
   },
   "scripts": {
