--- a/back_end/package.json
+++ b/back_end/package.json
@@ -22,6 +22,7 @@
     "express-jwt": "^6.0.0",
     "express-jwt-authz": "^2.4.1",
     "jwks-rsa": "^1.12.3",
+    "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "react-router-dom": "^5.2.0"
   }
