--- a/front_end/package.json
+++ b/front_end/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^1.3.0",
+    "moment": "^2.29.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^5.2.0",
