Weather api works, everything needs to be worked on
linked weather api into elderly portal want to kms after seeing how our things look

--- a/back_end/package.json
+++ b/back_end/package.json
@@ -4,7 +4,7 @@
   "description": "Starter kit for creating React and Express apps",
   "main": "server.js",
   "scripts": {
-    "client-install": "cd front_end && npm install",
+    "client-install": "cd .. && cd front_end && npm install",
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "cd ../front_end && npm start",
