--- a/front_end/package.json
+++ b/front_end/package.json
@@ -7,8 +7,10 @@
     "moment": "^2.29.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-flip-move": "^3.0.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "sfcookies": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
