--- a/front_end/package.json
+++ b/front_end/package.json
@@ -11,6 +11,7 @@
     "react-flip-move": "^3.0.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-select": "^4.3.0",
     "sfcookies": "^1.0.2"
   },
   "scripts": {
